--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,8 @@
 /* home */
 #home .alert-info{padding: 2em 0;max-width: 400px;margin: 2em auto 0;}
 #home .alert-info p{margin-bottom: 0;}
+
+/* product item */
+.quantity-box input::-webkit-outer-spin-button,
+.quantity-box input::-webkit-inner-spin-button{-webkit-appearance: none;margin: 0;}
+.quantity-box input{-moz-appearance:textfield;max-width: 40px;text-align: center;}
