--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /* general */
 .container{max-width: 1200px;margin: auto;}
+.flex {display: -webkit-box !important; display: -moz-box !important; display: -ms-flexbox !important; display: -webkit-flex !important; display: flex !important;}
 
 /* main-menu */
 .main-menu{background-color: #000;padding: 1em 0;}
@@ -15,7 +16,13 @@
 #home .alert-info{padding: 2em 0;max-width: 400px;margin: 2em auto 0;}
 #home .alert-info p{margin-bottom: 0;}
 
+/* products grid */
+.loader-container{margin-top: 2em;}
+.loading-gif{width: 50px;}
+.products-grid{margin-top: 2em;}
+
 /* product item */
+.quantity-box{margin: 1em 0;}
 .quantity-box input::-webkit-outer-spin-button,
 .quantity-box input::-webkit-inner-spin-button{-webkit-appearance: none;margin: 0;}
 .quantity-box input{-moz-appearance:textfield;max-width: 40px;text-align: center;}
