--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,32 @@
+/* reset */
+html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;}
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section{display: block;}
+body{line-height: 1;}
+ol, ul{list-style: none;}
+blockquote, q{quotes: none;}
+blockquote:before, blockquote:after,q:before, q:after{content: '';content: none;}
+table{border-collapse: collapse;border-spacing: 0;}
+button{border: none;background: none;}
+
+
 /* general */
+*{ -webkit-box-sizing: border-box;box-sizing: border-box}
+ul{list-style-type: none}
+a{-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-o-transition: all 0.2s linear;-ms-transition: all 0.2s linear;transition: all 0.2s linear;}
+a,
+a:hover{text-decoration: none;color: inherit;}
+body{font-size: 19px;font-family: 'Roboto', sans-serif;color: #1d1d1d;}
+img,
+svg{max-width: 100%;}
+strong{font-weight: 600;}
+h1{font-size: 2em;}
+.animated{-webkit-transition: 0.2s all linear;-o-transition: 0.2s all linear;transition: 0.2s all linear;}
 .container{max-width: 1200px;margin: auto;}
 .flex {display: -webkit-box !important; display: -moz-box !important; display: -ms-flexbox !important; display: -webkit-flex !important; display: flex !important;}
+.bg-cover-center{background-size: cover;background-position: center;background-repeat: no-repeat;}
+.btn.btn-v1{background-color: #000;border: 2px solid #000;}
+.btn.btn-v1:hover{background-color: #fff;color: #000;}
+.underline{text-decoration: underline;}
 
 /* main-menu */
 .main-menu{background-color: #000;padding: 1em 0;}
@@ -13,16 +39,38 @@
 .main-menu .cart path{fill: #fff;}
 
 /* home */
+#home h1{text-align: center;font-size: 2em;margin-top: 1em;}
 #home .alert-info{padding: 2em 0;max-width: 400px;margin: 2em auto 0;}
 #home .alert-info p{margin-bottom: 0;}
 
 /* products grid */
-.loader-container{margin-top: 2em;}
+.loader-container{margin-top: 2em;width: 100%;}
 .loading-gif{width: 50px;}
 .products-grid{margin-top: 2em;}
 
 /* product item */
-.quantity-box{margin: 1em 0;}
-.quantity-box input::-webkit-outer-spin-button,
-.quantity-box input::-webkit-inner-spin-button{-webkit-appearance: none;margin: 0;}
-.quantity-box input{-moz-appearance:textfield;max-width: 40px;text-align: center;}
+.product-item .image-container{padding-top: 100%;margin-bottom: 1em;}
+.product-item h3{font-size: 1.3em;}
+.product-item .quantity-box{margin: 1em 0;}
+.product-item .quantity-box input::-webkit-outer-spin-button,
+.product-item .quantity-box input::-webkit-inner-spin-button{-webkit-appearance: none;margin: 0;}
+.product-item .quantity-box input{-moz-appearance:textfield;text-align: center;border-left: 0;border-right: 0;width: 50px;}
+.product-item .quantity-box > *{width: 35px;height: 35px}
+.product-item .quantity-box > button{border: 1px solid;}
+.product-item .buttons-container{flex-direction: column;}
+.product-item .buttons-container .add-to-cart{max-width: 100%;width: 200px;margin: 0 auto 0.5em;}
+.product-item .buttons-container .view-more:hover{text-decoration: underline;}
+
+/* product detail page */
+#product-detail-page .product{margin-top: 4em;}
+#product-detail-page .product .image-bg{padding-top: 100%;}
+#product-detail-page .product .price{margin: 1em 0;}
+#product-detail-page .product .description{margin-bottom: 2em;}
+#product-detail-page .product .buttons-container{flex-direction: column;}
+#product-detail-page .product .buttons-container .btn{margin-bottom: 1em;}
+
+/* cart page */
+#cart-page{padding-top: 3em;}
+#cart-page h1{margin: 0 auto 2em;}
+#cart-page p{margin: auto;}
+#cart-page .continue-shopping{margin: 3em auto 0;}
