--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,11 @@ h1{font-size: 2em;}
 #home .alert-info{padding: 2em 0;max-width: 400px;margin: 2em auto 0;}
 #home .alert-info p{margin-bottom: 0;}
 
+/* collection */
+#collection h1{text-align: center;font-size: 2em;margin-top: 1em;}
+#collection .alert-info{padding: 2em 0;max-width: 400px;margin: 2em auto 0;}
+#collection .alert-info p{margin-bottom: 0;}
+
 /* products grid */
 .products-grid{margin-top: 2em;}
 
