--- a/src/App.css
+++ b/src/App.css
@@ -40,10 +40,16 @@ h1{font-size: 2em;}
 /* main-menu */
 .main-menu{background-color: #000;padding: 1em 0;}
 .main-menu ul{display: flex; justify-content: space-between;margin: 0;}
-.main-menu ul li{list-style: none;color: #fff;cursor: pointer;}
+.main-menu ul li,
+.main-menu button{list-style: none;color: #fff;cursor: pointer;padding: 0;}
 .main-menu ul li:hover{text-decoration: underline;}
 .main-menu ul li a,
 .main-menu ul li a:hover{color: #fff;}
+.main-menu .dropdown-menu.show{display: flex;flex-direction: column;padding: 0.5em;}
+.main-menu .dropdown-menu a{color: #000;}
+.main-menu .dropdown-menu a:hover,
+.main-menu .dropdown-menu a.active{color:#000;text-decoration: underline;}
+.main-menu .dropdown-menu a:not(:last-child){margin-bottom: 0.5em;}
 .main-menu .cart-item{position: relative;}
 .main-menu .cart-item .cart-count{position: absolute;right: -8px;top: -5px;width: 15px;height: 15px;border-radius: 50%;justify-content: center;align-items: center;background: #fff;color: #000;font-size: 0.6em;}
 .main-menu .cart-item .cart{padding:0;background: none;border: none;}
@@ -73,6 +79,9 @@ h1{font-size: 2em;}
 .product-item .buttons-container{flex-direction: column;}
 .product-item .buttons-container .add-to-cart{max-width: 100%;width: 200px;margin: 0 auto 0.5em;}
 .product-item .buttons-container .view-more:hover{text-decoration: underline;}
+.no-product-found-message{text-align: center;margin-top: 3em;}
+.no-product-found-message h2{font-size: 2em;margin-bottom: 0.5em;}
+.no-product-found-message a{text-decoration: underline;}
 
 /* product detail page */
 #product-detail-page .product{margin-top: 4em;}
@@ -87,14 +96,27 @@ h1{font-size: 2em;}
 #product-detail-page .product .buttons-container .atc .btn{width: calc(80% - 10px);}
 #product-detail-page .product .buttons-container .back-to-home{margin-top: 2em;}
 
-/* cart page */
-#cart-page{padding: 3em 0;}
+/* cart & checkout page */
+#cart-page,
+#checkout-page{padding: 3em 0;}
 #cart-page .container{max-width: 700px;}
 #cart-page h1{margin: 0 auto 1em;}
 #cart-page p{margin: auto;}
 #cart-page .continue-shopping{margin: 2em auto 0;}
-#cart-page .product-item{border-bottom: 1px solid;padding-bottom: 1em;margin: 1em 0 0;}
-#cart-page .product-item:last-child{border-bottom: none;margin-bottom: 2em;}
-#cart-page .product-item .image-container{padding-top: 40%;margin-bottom: 0;}
-#cart-page .checkout-btn{margin-top: 2em;}
+#cart-page .product-item,
+#checkout-page .product-item{border-bottom: 1px solid;padding-bottom: 1em;margin: 1em 0 0;}
+#cart-page .product-item:last-child,
+#checkout-page .product-item:last-child{border-bottom: none;margin-bottom: 2em;}
+#cart-page .product-item .image-container,
+#checkout-page .product-item .image-container{padding-top: 40%;margin-bottom: 0;}
+#cart-page .product-item h3,
+#checkout-page .product-item h3{margin-bottom: 0.5em;}
+#cart-page .product-item p:not(:last-child),
+#checkout-page .product-item p:not(:last-child){margin-bottom: 0.5em;}
+#cart-page .cart-total{margin-bottom: 1em;}
+#cart-page .checkout-btn{margin-top: 2em;color: #fff;padding: 0.5em 2em;}
+#cart-page .checkout-btn:hover{color: #000;}
 #cart-page .success-message{margin-top: 1em;}
+
+/* checkout */
+#checkout-page .input-container{display: flex;flex-direction: column;}
